--- a/src/main/resources/assets/oliveforgemod/lang/en_us.json
+++ b/src/main/resources/assets/oliveforgemod/lang/en_us.json
@@ -1,2 +1,14 @@
 {
+  "item.oliveforgemod.walnut": "Walnut",
+
+  "block.oliveforgemod.walnut_log": "Walnut Log",
+  "block.oliveforgemod.walnut_planks": "Walnut Planks",
+  "block.oliveforgemod.walnut_wood": "Walnut Wood",
+  "block.oliveforgemod.stripped_walnut_log": "Stripped Walnut Log",
+  "block.oliveforgemod.stripped_walnut_wood": "Stripped Walnut Wood",
+  "block.oliveforgemod.walnut_leaves": "Walnut Leaves",
+
+  "block.oliveforgemod.walnut_sapling": "Walnut Sapling",
+  "terrablender_deferred_placeholder": "walnut_forest",
+  "creativetab.oliveforgemod.walnut": "Walnuts"
 }
